--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,11 +17,13 @@ dependencies = [
     "nest-asyncio>=1.6.0",
     "notebook>=7.4.5",
     "pandas>=2.3.2",
+    "pillow>=11.3.0",
     "plotly>=6.3.1",
     "pycountry>=24.6.1",
     "pydantic>=2.12.3",
     "python-levenshtein>=0.27.3",
     "requests>=2.32.5",
+    "st-theme>=1.2.3",
     "streamlit>=1.51.0",
     "thefuzz>=0.22.1",
     "tqdm>=4.67.1",
