--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "jupyter>=1.1.1",
     "matplotlib>=3.10.6",
     "nest-asyncio>=1.6.0",
+    "networkx>=3.5",
     "notebook>=7.4.5",
     "pandas>=2.3.2",
     "pillow>=11.3.0",
@@ -22,6 +23,7 @@ dependencies = [
     "pycountry>=24.6.1",
     "pydantic>=2.12.3",
     "python-levenshtein>=0.27.3",
+    "pyvis>=0.3.2",
     "requests>=2.32.5",
     "st-theme>=1.2.3",
     "streamlit>=1.51.0",
